<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="com.kim.daekyung.myapplication.FirstTestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fragment_first_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:maxLength="20"
            android:hint="@string/fragment_first_edit_text_hint"/>

        <Button
            android:id="@+id/fragment_first_button_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_first_button_input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/fragment_first_button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/fragment_first_button_clear"/>

        <Button
            android:id="@+id/fragment_first_button_execute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/fragment_first_button_execute"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_first_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
