<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="com.kim.daekyung.myapplication.SecondTestFragment">

    <Button
        android:id="@+id/fragment_second_button_execute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/fragment_first_button_execute"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_second_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fragment_second_edit_text_hint"
            android:text="Test Html<font color=brown>tag</font>Test Message"
            android:layout_weight="0.5"/>

        <TextView
            android:id="@+id/fragment_second_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="left|center_vertical"
            android:text="@string/fragment_second_text_view_result" />

    </LinearLayout>



</LinearLayout>
